[rk-grpc] Implement RK TV [commit:dongxuny]
