# boot/api/v1/rk_common_service.swagger.json
@@ -11,15 +11,38 @@
     "application/json"
   ],
   "paths": {
-    "/v1/rk/config": {
+    "/v1/rk/apis": {
       "get": {
-        "summary": "DumpConfig Stub",
-        "operationId": "RkCommonService_DumpConfig",
+        "summary": "List API Stub",
+        "operationId": "RkCommonService_APIS",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/DumpConfigResponse"
+              "$ref": "#/definitions/v1ListAPIResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "tags": [
+          "RkCommonService"
+        ]
+      }
+    },
+    "/v1/rk/config": {
+      "get": {
+        "summary": "Config Stub",
+        "operationId": "RkCommonService_Config",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1DumpConfigResponse"
             }
           },
           "default": {
@@ -42,7 +65,7 @@
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/GCResponse"
+              "$ref": "#/definitions/v1GCResponse"
             }
           },
           "default": {
@@ -65,7 +88,7 @@
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/HealthyResponse"
+              "$ref": "#/definitions/v1HealthyResponse"
             }
           },
           "default": {
@@ -88,7 +111,53 @@
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/InfoResponse"
+              "$ref": "#/definitions/v1InfoResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "tags": [
+          "RkCommonService"
+        ]
+      }
+    },
+    "/v1/rk/req": {
+      "get": {
+        "summary": "Req Stub",
+        "operationId": "RkCommonService_Req",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1ReqResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "tags": [
+          "RkCommonService"
+        ]
+      }
+    },
+    "/v1/rk/sys": {
+      "get": {
+        "summary": "Sys Stub",
+        "operationId": "RkCommonService_Sys",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1SysResponse"
             }
           },
           "default": {
@@ -105,36 +174,122 @@
     }
   },
   "definitions": {
-    "DumpConfigResponse": {
+    "protobufAny": {
+      "type": "object",
+      "properties": {
+        "type_url": {
+          "type": "string"
+        },
+        "value": {
+          "type": "string",
+          "format": "byte"
+        }
+      }
+    },
+    "rpcStatus": {
+      "type": "object",
+      "properties": {
+        "code": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "message": {
+          "type": "string"
+        },
+        "details": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/protobufAny"
+          }
+        }
+      }
+    },
+    "v1API": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "grpc": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/v1GRPC"
+          }
+        },
+        "gw": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/v1GW"
+          }
+        }
+      }
+    },
+    "v1DumpConfigResponse": {
       "type": "object",
       "properties": {
         "viper": {
           "type": "array",
           "items": {
-            "$ref": "#/definitions/Viper"
+            "$ref": "#/definitions/v1Viper"
           }
         },
         "rk": {
           "type": "array",
           "items": {
-            "$ref": "#/definitions/RK"
+            "$ref": "#/definitions/v1RK"
           }
         }
       }
     },
-    "GCResponse": {
+    "v1GCResponse": {
       "type": "object",
       "properties": {
         "mem_stats_before_gc": {
-          "$ref": "#/definitions/MemStats"
+          "$ref": "#/definitions/v1MemStats"
         },
         "mem_stats_after_gc": {
-          "$ref": "#/definitions/MemStats"
+          "$ref": "#/definitions/v1MemStats"
         }
       },
       "title": "GC response, memory stats would be returned"
     },
-    "HealthyResponse": {
+    "v1GRPC": {
+      "type": "object",
+      "properties": {
+        "service": {
+          "type": "string"
+        },
+        "method": {
+          "type": "string"
+        },
+        "type": {
+          "type": "string"
+        },
+        "port": {
+          "type": "integer",
+          "format": "int64"
+        }
+      }
+    },
+    "v1GW": {
+      "type": "object",
+      "properties": {
+        "port": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "path": {
+          "type": "string"
+        },
+        "method": {
+          "type": "string"
+        },
+        "sw": {
+          "type": "string"
+        }
+      }
+    },
+    "v1HealthyResponse": {
       "type": "object",
       "properties": {
         "healthy": {
@@ -142,7 +297,7 @@
         }
       }
     },
-    "Info": {
+    "v1Info": {
       "type": "object",
       "properties": {
         "uid": {
@@ -181,15 +336,26 @@
         }
       }
     },
-    "InfoResponse": {
+    "v1InfoResponse": {
       "type": "object",
       "properties": {
         "info": {
-          "$ref": "#/definitions/Info"
+          "$ref": "#/definitions/v1Info"
         }
       }
     },
-    "MemStats": {
+    "v1ListAPIResponse": {
+      "type": "object",
+      "properties": {
+        "api": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/v1API"
+          }
+        }
+      }
+    },
+    "v1MemStats": {
       "type": "object",
       "properties": {
         "mem_alloc_byte": {
@@ -224,7 +390,7 @@
       },
       "title": "Memory stats"
     },
-    "RK": {
+    "v1RK": {
       "type": "object",
       "properties": {
         "name": {
@@ -235,44 +401,91 @@
         }
       }
     },
-    "Viper": {
+    "v1ReqMetricsRK": {
       "type": "object",
       "properties": {
-        "name": {
+        "path": {
           "type": "string"
         },
-        "raw": {
-          "type": "string"
-        }
-      }
-    },
-    "protobufAny": {
-      "type": "object",
-      "properties": {
-        "type_url": {
-          "type": "string"
+        "elapsed_nano_p50": {
+          "type": "number",
+          "format": "float"
         },
-        "value": {
-          "type": "string",
-          "format": "byte"
-        }
-      }
-    },
-    "rpcStatus": {
-      "type": "object",
-      "properties": {
-        "code": {
+        "elapsed_nano_p90": {
+          "type": "number",
+          "format": "float"
+        },
+        "elapsed_nano_p99": {
+          "type": "number",
+          "format": "float"
+        },
+        "elapsed_nano_p999": {
+          "type": "number",
+          "format": "float"
+        },
+        "count": {
           "type": "integer",
-          "format": "int32"
+          "format": "int64"
         },
-        "message": {
-          "type": "string"
-        },
-        "details": {
+        "res_code": {
           "type": "array",
           "items": {
-            "$ref": "#/definitions/protobufAny"
+            "$ref": "#/definitions/v1ResCodeRK"
           }
+        }
+      }
+    },
+    "v1ReqResponse": {
+      "type": "object",
+      "properties": {
+        "metrics": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/v1ReqMetricsRK"
+          }
+        }
+      }
+    },
+    "v1ResCodeRK": {
+      "type": "object",
+      "properties": {
+        "res_code": {
+          "type": "string"
+        },
+        "count": {
+          "type": "integer",
+          "format": "int64"
+        }
+      }
+    },
+    "v1SysResponse": {
+      "type": "object",
+      "properties": {
+        "cpu_percentage": {
+          "type": "number",
+          "format": "float"
+        },
+        "mem_percentage": {
+          "type": "number",
+          "format": "float"
+        },
+        "mem_usage_mb": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "up_time": {
+          "type": "string"
+        }
+      }
+    },
+    "v1Viper": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "raw": {
+          "type": "string"
         }
       }
     }
